<resources>
    <string name="app_name">sms2223LaureApp</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="resetError">Account not found!</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="sign_in_fail">Sign in failed!</string>
    <string name="sign_out">Sign out</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="sign_up_fail">Sign up failed</string>
    <string name="verify_mail">Please verify your e-mail</string>
    <string name="prompt_name">Full name</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_reg_number">Registration number</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete_acc">Delete account</string>
    <string name="team_name" translatable="false">Team\nSaracino-Piteo</string>
    <string name="app_name_short" translatable="false">Laure App</string>
    <string name="guest">Log in as Guest</string>
    <string name="account" translatable="false">Account</string>
    <string name="logout">Log out</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="all_theses">All theses</string>
    <string name="my_thesis">My thesis</string>
    <string name="my_theses">My theses</string>
    <string name="my_students">My students</string>
    <string name="available">Available theses</string>
    <string name="rank">Theses ranking</string>
    <string name="Thesis">Thesis</string>
    <string name="Task" translatable="false">Task</string>
    <string name="requests">Requests</string>
    <string name="progress">In progress</string>
    <string name="addThesis">Add Thesis</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="addFile">Add File</string>
    <string name="cancel">Cancel</string>
    <string name="saveThesis">Save Thesis</string>
    <string name="requirement">Add Requirements</string>
    <string name="average">Average</string>
    <string name="exam">Exam</string>
    <string name="Cancel">Cancel</string>
    <string name="addReq">Choose requirement\'s type and its value</string>
    <string name="skill" translatable="false">Skill</string>
    <string name="timelimit">Time Limit</string>
    <string name="error">Mandatory field</string>
    <string name="delete">Delete</string>
    <string name="suredelete">Delete this element?</string>
    <string name="detail">Thesis Detail</string>
    <string name="req">Requirements:</string>
    <string name="attach">Attachments:</string>
    <string name="reqThesis">Request Thesis</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="modify">Modify thesis</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="qr" translatable="false">Qr</string>
    <string name="thesisQr">Scan to view thesis</string>
    <string name="reqDialog">"Select your requirements"</string>
    <string name="noReq">There are no requirements for this thesis</string>
    <string name="noFile">There are no file for this thesis</string>
    <string name="sent">Request sent</string>
    <string name="meeting" translatable="false">Meeting</string>
    <string name="sureGoBack">Are you sure you want to discard changes?</string>
    <string name="yes">Yes</string>
    <string name="favThesis">Added in favorites</string>
    <string name="remFavorite">Removed from favorites</string>
    <string name="permission">Permission Denied</string>
    <string name="yourexams">Check your exams</string>
    <string name="youraverage">Insert your average</string>
    <string name="requestConfirm">Confirm application?</string>
    <string name="next">Next</string>
    <string name="deleteThesis">Delete Thesis</string>
    <string name="sureDeleteThesis">Are you sure you want to delete this thesis?</string>
    <string name="appdetail">Application Detail</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="filTitle">Filter by Title</string>
    <string name="filTeacher">Filter by Teacher</string>
    <string name="filAverage">Filter by Average</string>
    <string name="filter">Filter</string>
    <string name="insTeacher">Insert Teacher\'s name</string>
    <string name="insAverage">Insert Average Interval</string>
    <string name="insTitle">Insert Thesis Title</string>
    <string name="searchThesis">Search Thesis</string>
    <string name="filThesis">Filter by Average</string>
    <string name="searchTeacher">Filter by Teacher</string>
    <string name="success">Updated successfully</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="you">You</string>
    <string name="now">Now</string>
    <string name="maxmin">First value must be lower than second</string>
    <string name="noThesis">No thesis found</string>
    <string name="thesis">Thesis</string>
    <string name="alreadyApplied">You already have an open application!</string>
    <string name="wantDownload">Do you want to download this file?</string>
    <string name="downloading">Downloading…</string>
    <string name="writeMessage">Send a message…</string>
    <string name="noAccepted">No thesis request accepted</string>
    <string name="noTask">There are no tasks for this thesis</string>
    <string name="noMeeting">There are not meetings for this thesis</string>
    <string name="addTask">Add Task</string>
    <string name="save">Save</string>
    <string name="status">Status:</string>
    <string name="dueDate">Due date:</string>
    <string name="openStatus">Open</string>
    <string name="closedStatus">Closed</string>
    <string name="taskDetail">Task Detail</string>
    <string name="modStatus">Modify Status</string>
    <string name="modTask">Modify Task</string>
    <string name="delTask">Delete Task</string>
    <string name="inProgressStatus">In Progress</string>
    <string name="averageOrderDescending">Average Descending</string>
    <string name="averageOrderAscending">Average Ascending</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="addMeeting">Add Meeting</string>
    <string name="meetingDetail">Meeting Detail</string>
    <string name="subjects">Subjects:</string>
    <string name="addCalendar">Add to Calendar</string>
    <string name="modMeet">Modify Meeting</string>
    <string name="delMeet">Delete Meeting</string>
    <string name="newMessages">New messages</string>
    <string name="thesisRef">Message referred to thesis \"%1s\"</string>
    <string name="taskRef">Message referred to task \"%1s\"</string>
    <string name="chatList">LaureApp Messenger</string>
    <string name="resetPassword">Reset password</string>
    <string name="signUp">Sign Up</string>
    <string name="assistantSupervisor">Assistant supervisor</string>
    <string name="deleteAccountPrompt">Are you sure you want to delete your account?</string>
    <string name="loginAgain">Please login again</string>
    <string name="accountDeleted">Account deleted successfully</string>
    <string name="logInAsTeacher">Log in as Teacher</string>
    <string name="logInAsStudent">Log in as Student</string>
</resources>