<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat_bubble"
        android:title="@string/chat"
        android:tooltipText="@string/chat"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/qr"
        android:icon="@drawable/qr_code"
        android:title="@string/qr"
        android:tooltipText="@string/qr"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        android:tooltipText="@string/share"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_empty"
        android:title="@string/favorite"
        android:tooltipText="@string/favorite"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/req"
        android:icon="@drawable/do_request"
        android:title="@string/reqThesis"
        android:tooltipText="@string/reqThesis"
        app:showAsAction="always|withText" />
</menu>