<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserInformationActivity">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="@dimen/field_width"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="@dimen/field_width"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameField" />

    <EditText
        android:id="@+id/regNumberField"
        android:layout_width="@dimen/field_width"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/prompt_reg_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneField" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="@dimen/field_width"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="doConfirm"
        android:text="@string/action_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNumberField" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="@dimen/field_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:onClick="goToSignIn"
        android:shadowRadius="0"
        android:text="@string/action_delete_acc"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton" />
</androidx.constraintlayout.widget.ConstraintLayout>