<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyThesisFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noThesisText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noThesis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#007fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ownerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/req"
            android:textColor="#007fff"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textNoReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/noReq"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/reqList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/attach"
            android:textColor="#007fff"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textNoFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/noFile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/fileList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />


    </LinearLayout>
</FrameLayout>